# SystemSoftware

./: CMakeLists.txt  README.md  Untitled 2.c  Untitled.c  find.c  monitor_file.c
Assignment1/: Logger.c  Logger.h  audit.c  audit.h  backup.c  backup.h  config.txt  configuration.c  configuration.h  file_changes.c  file_changes.h  file_copy  file_copy.c  file_modified.c  file_modified.h  file_monitor.c  folder_copy  folder_copy.c  logger  logger.c  logger.h  main.c  main1  main1.c  makefile  myProg  permission  permissions.c  permissions.h  process.c  read_file_rev.c  syslog  syslog.c  test  tim.txt  time  time_str  time_str.c  timestamp.c  timestamp.h
Assignment2/: client.c  log.txt  sendFile.c  sendFile.h  server.c  test_client.c  test_server.c  timestamp.c  timestamp.h  unp.h
Assignment2/ClientFiles/: index.html  tester.txt  tim.txt
Assignment2/ServerFiles/: tim.txt
Assignment2/ServerFiles/Offers/: index.txt
Assignment2/ServerFiles/Promotions/: index.txt
Assignment2/ServerFiles/Sales/: index.txt
Assignment2/run/: password.txt
Lab 2/: areaProg  main.c  makefile
Lab1/: area_of_circle.c  area_of_circle.h  area_of_rec.c  area_of_rec.h  area_of_triangle.c  area_of_triangle.h  main.c  roman_num.c  roman_num.h
Lab3/: fork.c  ls_cmd  ls_cmd.c  process  process.c  test.c
Lab4/: daemon  daemon.c  time  time.c
Lab5/: main1  main1.c  main2  main2.c  part4  part4.c  part5  part5.c  process  process.c  test  test.c
